--- a/package.json
+++ b/package.json
@@ -15,14 +15,24 @@
   "author": "Sinisa Mikulic",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "cookie-parser": "^1.3.3",
+    "debug": "^2.1.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.10.1",
     "flux": "^2.1.1",
+    "jade": "^1.9.1",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
+    "mongoose": "^4.2.3",
+    "morgan": "^1.5.1",
     "node-guid": "0.0.3",
     "object-assign": "^4.0.1",
+    "passport": "^0.2.1",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.4",
     "uuid": "^2.0.1"
