--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stash",
   "repository": "git@github.com:smikulic/stash.git",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Stash app, track your financial goals.",
   "main": "",
   "scripts": {
@@ -12,7 +12,10 @@
     "express",
     "mongodb"
   ],
-  "author": "Sinisa Mikulic",
+  "engines": {
+    "node": "4.4.0"
+  },
+  "author": "Sinisa Mikulic <sinisa.mikulic@gmail.com>",
   "dependencies": {
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.3.3",
