Add Gulp to dependencies for production ENV

--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "passwordless-mongostore": "^0.1.3",
     "react": "^0.13.3",
     "react-router": "^0.13.4",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    // Moved Gulp to dependencies so it can run in production
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
   },
   "devDependencies": {
     "babelify": "^6.3.0",
     "browser-sync": "^2.9.10",
     "browserify": "^11.2.0",
-    "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
