--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^1.6.0"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
