--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0"
-  },
-  "devDependencies": {
+    "gulp-sourcemaps": "^1.6.0",
     "babelify": "^6.3.0",
     "browser-sync": "^2.9.10",
     "browserify": "^11.2.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
   }
 }
