--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "author": "Sinisa Mikulic <sinisa.mikulic@gmail.com>",
   "dependencies": {
+    "babelify": "^6.3.0",
     "body-parser": "^1.14.1",
+    "browser-sync": "^2.9.10",
+    "browserify": "^11.2.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.1",
     "ejs": "^2.3.4",
@@ -25,9 +28,13 @@
     "express": "^4.13.3",
     "express-session": "^1.10.1",
     "flux": "^2.1.1",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "keymirror": "^0.1.1",
     "lodash": "^4.15.0",
-    "moment": "^2.10.6",
+    "moment": "^2.14.1",
     "mongoose": "^4.2.3",
     "morgan": "^1.5.1",
     "node-guid": "0.0.3",
@@ -36,17 +43,9 @@
     "passwordless-mongostore": "^0.1.3",
     "react": "^0.13.3",
     "react-router": "^0.13.4",
-    "uuid": "^2.0.1",
-    "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.6.0",
-    "babelify": "^6.3.0",
-    "browser-sync": "^2.9.10",
-    "browserify": "^11.2.0",
     "reactify": "^1.1.1",
+    "uuid": "^2.0.1",
     "vinyl-source-stream": "^1.1.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
